<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.activity.TasksMainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/TextApper.BaseToolbar.TasksMainActivity"
        app:title="@string/app_name"        />

    <android.support.v4.view.ViewPager android:id="@+id/viewpager"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            style="@style/TextApper.TabLayout">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_day"
                style="TextApper.TabItem"
                android:text="@string/tab_day" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_week"
                style="TextApper.TabItem"
                android:text="@string/tab_week" />
        </android.support.design.widget.TabLayout>
    </android.support.v4.view.ViewPager>

</LinearLayout>